<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TheBrain</string>
    <string name="tvSettings">Settings</string>
    <string name="tvGameMode">Game Mode</string>
    <string name="rbThemeDefinition">Word -> Definition</string>
    <string name="swNightMode">Night Mode</string>
    <string name="rbDefinitionTheme">Definition -> Word</string>
    <string name="butAddElement">Add</string>
    <string name="tvFont">Font</string>
    <string name="rbArial">Arial</string>
    <string name="rbTimes">Times New Roman</string>
    <string name="butEditElement">Edit</string>
    <string name="tvColor">Color</string>
    <string name="butDelElement">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="butSet">Settings</string>
    <string name="butTheme">Lists</string>
    <string name="tvElement">Word :</string>
    <string name="rbBlue">Blue</string>
    <string name="rbRed">Red</string>
    <string name="rbWhite">White</string>
    <string name="rbBlack">Black</string>
    <string name="tvElementDef">Description :</string>
    <string name="title_activity_list_management">ListManagement</string>
    <string name="themeTitle">Lists :</string>
    <string name="butStartTheme">Start</string>
    <string name="butEditTheme">Edit</string>
    <string name="addTheme">Add</string>
    <string name="butDelTheme">Delete</string>
    <string name="title_activity_add_list">AddList</string>
    <string name="tvTheme">List name :</string>
    <string name="butValid">Ok</string>
    <string name="butCancel">Cancel</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_add_word">AddWord</string>
    <string name="title_activity_lists_management">ListsManagement</string>
    <string name="title_activity_start">Start</string>


</resources>
