<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvSettings"
        android:id="@+id/tvSettings"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvGameMode"
        android:id="@+id/tvGameMode" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbThemeDefinition"
        android:id="@+id/rbThemeDefinition"
        android:checked="false" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbDefinitionTheme"
        android:id="@+id/rbDefinitionTheme"
        android:checked="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swNightMode"
        android:id="@+id/swNightMode"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvFont"
        android:id="@+id/tvFont" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbArial"
        android:id="@+id/rbArial"
        android:checked="false" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbTimes"
        android:id="@+id/rbTimes"
        android:checked="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tvColor"
        android:id="@+id/tvColor" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbBlue"
        android:id="@+id/rbBlue"
        android:checked="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbWhite"
        android:id="@+id/rbWhite"
        android:checked="false" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbBlack"
        android:id="@+id/rbBlack"
        android:checked="false" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rbRed"
        android:id="@+id/rbRed"
        android:checked="false" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/butCancel"
            android:id="@+id/butCancel"
            android:layout_row="1"
            android:layout_column="0"
            android:onClick="butBack"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/butValid"
            android:id="@+id/butValid"
            android:layout_row="1"
            android:layout_column="10"
            android:onClick="butConfirm"/>
    </GridLayout>

</LinearLayout>